--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Love Christine</title>
+    <title>For My Love Christinaaaaaa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -127,7 +127,7 @@
                 <div class="text-pink-500 text-3xl mb-4">
                     <i class="fas fa-heart"></i>
                 </div>
-                <h3 class="dancing-script text-2xl text-pink-600 mb-2">My Everything</h3>
+                <h3 class="dancing-script text-2xl text-pink-600 mb-2">My Everything (bass habla tbh)</h3>
                 <p class="text-gray-700">You complete me in ways I never knew possible.</p>
             </div>
         </div>
@@ -231,4 +231,5 @@
         window.addEventListener('load', createFlowers);
     </script>
 </body>
+
 </html>
